# real-time-leaderboard

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: main.py
app/api/: dependencies.py  router.py
app/api/routes/: health.py  leaderboard.py  websocket.py
app/core/: config.py  database.py  logging.py  redis.py
app/leaderboard/: __init__.py  container.py  events.py  manager.py  models.py  repository.py  schemas.py  service.py
frontend/: game.js  index.html  styles.css
src/config/: env.ts  redis.ts
src/leaderboard/: leaderboard.events.ts
tests/: test_api.py
