[project]
name = "realtime-leaderboard"
version = "0.1.0"
description = "Real-time leaderboard backend built with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Nashit" },
]
keywords = ["fastapi", "leaderboard", "realtime", "game-backend"]
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Repository = "https://github.com/pixelhamza/real-time-leaderboard"

[tool.setuptools.packages.find]
include = ["app*"]
